[package]
name = "stest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.24"
reqwest = {version = "0.11.16",default-features = false}
